--- a/index.html
+++ b/index.html
@@ -2,26 +2,64 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>These are examples of API's in action</title>
-
+    <title>Is It On Spotify? - Spotify Search Tool</title>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.4/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.4/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js" charset="utf-8"></script>
     <script src="javascript/app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
 
+  <!-- <script src="jquery-scrollTo.js"></script> -->
+
   </head>
   <body>
-  	<h1> Music Is Fun </h1>
-      <div>
-        <h2>Spotify Artist Search</h2>
+  <div class="row">
+  <nav>
+    <div class="col s12 light-green darken-1 nav-wrapper">
+  	<p class="right-align" style="color:#FFFFFF; font-size:38px;" >Is it on Spotify? </p>
+   </div></nav>
+   
+
+    <div class="container">
+     <br>
+     <br> 
+    <div class="row">
+    <div class="col s8 offset-s2">
+      <div class="card">
+      <div class="card-content">
+        <h4>Enter artist name:</h4>
         <div>
           <label for="spotify-q"></label>
           <input type="text" name="q" value="" id="spotify-q">
-          <input type="button" name="name" value="Search" id="spotify-q-button">
-          <h3>Spotify Search Results:</h3>
-          <div id="q-results" class="results"></div>
+          <a class="waves-effect waves-light btn light-green darken-1"><input type="button" name="name" value="Search " id="spotify-q-button"></a>
+          </div>
+          </div>
+          </div>
+          </div>
+
+          <div class="row">
+          <div class="col s8 offset-s2">
+          <div class="card">
+          <div class="card-content">
+          <h4>Spotify Search Results:</h4>
+          <div class="spospo"></div>
+          <ul class="collapsible popout" data-collapsible="accordion">
+            
+
+          </ul>
         </div>
         <hr>
       </div>
       <div id='albums-and-tracks'></div>
+
+     </div>
+      </div>
+      </div>
+
+      </div>
+      </div>
+
+
   </body>
 </html>
